fixed overflow on right problem

--- a/app/app/styles/main.css
+++ b/app/app/styles/main.css
@@ -87,3 +87,7 @@ body {
     border-bottom: 0;
   }
 }
+
+.scholarships {
+  overflow: hidden;
+}
